<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2015 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/layout_margin_bottom">

    <TextView
        style="@style/AppTheme.TitleText"
        android:text="@string/select_music"
        android:id="@+id/music_selection"
        android:gravity="left" />

    <TextView
        style="@style/AppTheme.DetailText"
        android:text="@string/select_music_details"
        android:id="@+id/music_selection_details"
        android:layout_below="@+id/music_selection" />

    <Button
        style="@style/AppTheme.BigButton"
        android:id="@+id/start_mission_button"
        android:text="@string/start_mission_button"
        android:onClick="onStartMissionPressed" />

</RelativeLayout>