<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2015 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/time_exercised"
        android:text="@string/initial_time"
        android:textSize="@dimen/large_text_size"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/large_vertical_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/num_steps_taken"
        android:text="@string/initial_num_steps"
        android:textSize="@dimen/large_text_size"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/large_vertical_margin"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/circular_progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:indeterminate="false"
        android:rotation="270"
        android:progressDrawable="@drawable/weapon_charge_progress" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/minutes_per_mile"
            android:text="@string/not_moving_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/percent_weapon_charged"
            android:text="@string/initial_percent_weapon_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text_size" />

    </LinearLayout>

</RelativeLayout>