<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2015 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/layout_margin_bottom">

    <TextView
        style="@style/AppTheme.TitleText"
        android:gravity="left"
        android:text="@string/challenge_speed_select"
        android:id="@+id/challenge_speed_title" />

    <TextView
        style="@style/AppTheme.DetailText"
        android:text="@string/challenge_speed_detail_text"
        android:id="@+id/challenge_speed_detail_text"
        android:layout_below="@+id/challenge_speed_title" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/challenge_speed_field"
        android:paddingTop="@dimen/large_vertical_margin"
        android:layout_below="@+id/challenge_speed_detail_text"
        android:thumbTint="@color/primary_dark_material_light"
        android:progressTint="@color/primary_dark_material_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/challenge_speed_text"
        android:paddingLeft="@dimen/large_horizontal_margin"
        android:paddingRight="@dimen/large_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/challenge_speed_field" />

    <Button
        style="@style/AppTheme.BigButton"
        android:id="@+id/enter_button"
        android:text="@string/run_specification_enter_button"
        android:onClick="onEnterPressed" />

</RelativeLayout>